# haskell-turing-machine

./: .gitignore  Main.hs  README.md  Testing.hs  haskell-turing-machine.cabal
.stack-work/: stack.sqlite3
.stack-work/ghci/51f90a4a/: cabal_macros.h
src/: Main.hs  SingleTape.hs  Testing.hs  TuringDefaults.hs  TuringMachine.hs  TuringMachines.hs
