name:                haskell-turing-machine
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/NeoVier/haskell-turing-machine#readme
license:             BSD3
license-file:        LICENSE
author:              Henrique da Cunha Buss
maintainer:          henrique.buss@hotmail.com
copyright:           2020 Henrique da Cunha Buss
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-turing-machine
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
